--- a/anthos-baremetal-edge-deployment/inventory/host_vars/cnuc-4.yaml
+++ b/anthos-baremetal-edge-deployment/inventory/host_vars/cnuc-4.yaml
@@ -18,13 +18,11 @@
 # Name of the cluster
 cluster_name: "cnuc-4"
 # Used for logging/metrics
-machine_label: "cnuc-4"
-
+machine_label: "{{ cluster_name }}"
 # Indicates that this is the primary machine in the cluster (only important for provisioning)
 primary_cluster_machine: true
 # Name of the "store" per the ACM repo
-acm_cluster_name: "store-global"
-
+acm_cluster_name: "{{ cluster_name }}"
 # This machine's IP
 control_plane_ip: "10.200.0.2"
 # The other IPs in the cluster
@@ -37,7 +35,6 @@ control_plane_ips: [
 control_plane_vip: "10.200.0.49"
 # Ingress (k8s) address, must be in LoadBalancer pool below
 ingress_vip: "10.200.0.50"
-
 # Load balancers created in this range
 load_balancer_pool_cidr: [
   "10.200.0.50-10.200.0.70"
