--- a/anthos-baremetal-edge-deployment/inventory/host_vars/edge-1.yaml
+++ b/anthos-baremetal-edge-deployment/inventory/host_vars/edge-1.yaml
@@ -2,11 +2,11 @@
 # Name of the cluster
 cluster_name: "edge-1"
 # Used for logging/metrics
-machine_label: "edge-1"
+machine_label: "{{ cluster_name }}"
 # Indicates that this is the primary machine in the cluster (only important for provisioning)
 primary_cluster_machine: true
 # Name of the "store" per the ACM repo
-acm_cluster_name: "store-chicago"
+acm_cluster_name: "{{ cluster_name }}"
 # This machine's IP
 control_plane_ip: "10.223.62.231"
 # The other IPs in the cluster
