chore: change deploy location after creating multi region repo

--- a/point-of-sale-app/inventory/pom.xml
+++ b/point-of-sale-app/inventory/pom.xml
@@ -133,18 +133,18 @@
   <distributionManagement>
     <snapshotRepository>
       <id>artifact-registry</id>
-      <url>artifactregistry://us-central1-maven.pkg.dev/google-samples/abm-edge-pos-jars</url>
+      <url>artifactregistry://us-maven.pkg.dev/google-samples/abm-edge-pos-jars</url>
     </snapshotRepository>
     <repository>
       <id>artifact-registry</id>
-      <url>artifactregistry://us-central1-maven.pkg.dev/google-samples/abm-edge-pos-jars</url>
+      <url>artifactregistry://us-maven.pkg.dev/google-samples/abm-edge-pos-jars</url>
     </repository>
   </distributionManagement>
 
   <repositories>
     <repository>
       <id>artifact-registry</id>
-      <url>artifactregistry://us-central1-maven.pkg.dev/google-samples/abm-edge-pos-jars</url>
+      <url>artifactregistry://us-maven.pkg.dev/google-samples/abm-edge-pos-jars</url>
       <releases>
         <enabled>true</enabled>
       </releases>
