cleanup: fix skaffold image references

--- a/point-of-sale-app/kubernetes-manifests/inventory.yaml
+++ b/point-of-sale-app/kubernetes-manifests/inventory.yaml
@@ -29,7 +29,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: inventory
-        image: gcr.io/abm-edge-test/inventory
+        image: us-docker.pkg.dev/google-samples/abm-edge-pos-images/inventory
         env:
         - name: CONNECTOR
           valueFrom:
