--- a/point-of-sale-app/kubernetes-manifests/api-server.yaml
+++ b/point-of-sale-app/kubernetes-manifests/api-server.yaml
@@ -29,7 +29,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: api-server
-        image: gcr.io/abm-edge-test/api-server
+        image: us-docker.pkg.dev/google-samples/abm-edge-pos-images/api-server
         env:
         - name: INVENTORY_EP
           valueFrom:
