--- a/point-of-sale-app/kubernetes-manifests/payments.yaml
+++ b/point-of-sale-app/kubernetes-manifests/payments.yaml
@@ -29,7 +29,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: payments
-        image: gcr.io/abm-edge-test/payments
+        image: us-docker.pkg.dev/google-samples/abm-edge-pos-images/payments
         resources:
           requests:
             cpu: 100m
