--- a/anthos-baremetal-edge-deployment/acm-config-sink/namespaces/pos/api-server.yaml
+++ b/anthos-baremetal-edge-deployment/acm-config-sink/namespaces/pos/api-server.yaml
@@ -16,7 +16,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: api-server
-  namespace: pos
 spec:
   selector:
     matchLabels:
@@ -30,7 +29,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: api-server
-        image: us-central1-docker.pkg.dev/abm-edge-test/abm-edge-point-of-sale/gcr.io/abm-edge-test/api-server:v1
+        image: us-docker.pkg.dev/google-samples/abm-edge-pos-images/api-server:v1
         env:
         - name: INVENTORY_EP
           valueFrom:
@@ -68,7 +67,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: api-server-svc
-  namespace: pos
 spec:
   type: ClusterIP
   selector:
