--- a/anthos-baremetal-edge-deployment/acm-config-sink/namespaces/pos/inventory.yaml
+++ b/anthos-baremetal-edge-deployment/acm-config-sink/namespaces/pos/inventory.yaml
@@ -16,7 +16,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: inventory
-  namespace: pos
 spec:
   selector:
     matchLabels:
@@ -30,7 +29,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: inventory
-        image: us-central1-docker.pkg.dev/abm-edge-test/abm-edge-point-of-sale/gcr.io/abm-edge-test/inventory:latest
+        image: us-docker.pkg.dev/google-samples/abm-edge-pos-images/inventory
         env:
         - name: CONNECTOR
           valueFrom:
@@ -73,7 +72,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: inventory-svc
-  namespace: pos
 spec:
   type: ClusterIP
   selector:
