--- a/anthos-baremetal-edge-deployment/acm-config-sink/namespaces/pos/api-server.yaml
+++ b/anthos-baremetal-edge-deployment/acm-config-sink/namespaces/pos/api-server.yaml
@@ -28,8 +28,10 @@ spec:
       serviceAccountName: default
       terminationGracePeriodSeconds: 5
       containers:
+      # [START api_server_image]
       - name: api-server
         image: us-docker.pkg.dev/google-samples/abm-edge-pos-images/api-server:v1
+      # [END api_server_image]
         env:
         - name: INVENTORY_EP
           valueFrom:
