--- a/anthos-baremetal-edge-deployment/roles/ready-ubuntu/tasks/main.yaml
+++ b/anthos-baremetal-edge-deployment/roles/ready-ubuntu/tasks/main.yaml
@@ -107,7 +107,7 @@
 ## TODO: This does not allow for multiple cnucs to be setup at one time
 ## TODO: This also does not skip non cnucs
 - name: "SSH Key access to other nodes"
-  include: setup-ssh-pub-key-access.yml
+  include: setup-ssh-pub-key-access.yaml
   tags:
   - abm-install
   - abm-ssh
@@ -141,7 +141,7 @@
   - docker
 
 - name: "Setup docker on host machine"
-  include: setup-docker-apt.yml
+  include: setup-docker-apt.yaml
   when: ( docker_version.stdout == "" or docker_version.stdout is version('20.9.0', '<') )
   tags:
   - docker
