--- a/anthos-baremetal-edge-deployment/roles/abm-install/tasks/main.yaml
+++ b/anthos-baremetal-edge-deployment/roles/abm-install/tasks/main.yaml
@@ -278,7 +278,7 @@
 
 ### Setup kubeconfig for all clusters
   - name: "Share kubeconfig with others in cluster"
-    include: share-kubeconfig.yml
+    include: share-kubeconfig.yaml
     tags:
     - abm-post-install
     - abm-install
