--- a/anthos-baremetal-edge-deployment/roles/abm-software/tasks/main.yaml
+++ b/anthos-baremetal-edge-deployment/roles/abm-software/tasks/main.yaml
@@ -179,7 +179,7 @@
 ### Operator
 # Check for ACM Operator
 - name: "Test for config-management operator presence"
-  include: kubectl-presence.yml
+  include: kubectl-presence.yaml
   vars:
     name: "config-management"
     type: "configmanagements.configmanagement.gke.io"
@@ -222,7 +222,7 @@
   - acm-config-management
 
 - name: "Test for config-management"
-  include: kubectl-presence.yml
+  include: kubectl-presence.yaml
   vars:
     name: "config-management"
     type: "configmanagements.configmanagement.gke.io"
@@ -266,7 +266,7 @@
   - acm-root-repo
 
 - name: "Test for Root Repo secret"
-  include: kubectl-presence.yml
+  include: kubectl-presence.yaml
   vars:
     name: "{{ root_repository_git_secret_name }}"
     type: "secrets"
@@ -292,7 +292,7 @@
   - acm-root-repo
 
 - name: "Test for Root Repo installed"
-  include: kubectl-presence.yml
+  include: kubectl-presence.yaml
   vars:
     name: "root-sync"
     type: "RootSync"
