Region tags to sh and k8 yaml

--- a/anthos-baremetal-edge-deployment/acm-config-sink/namespaces/pos/namespace.yaml
+++ b/anthos-baremetal-edge-deployment/acm-config-sink/namespaces/pos/namespace.yaml
@@ -1,3 +1,4 @@
+
 # Copyright 2021 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,7 +13,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# [START anthosbaremetal_pos_namespace_namespace_pos]
 apiVersion: v1
 kind: Namespace
 metadata:
   name: pos
+# [END anthosbaremetal_pos_namespace_namespace_pos]
+---
