--- a/anthos-baremetal-edge-deployment/acm-config-sink/namespaces/pos/api-server-lb.yaml
+++ b/anthos-baremetal-edge-deployment/acm-config-sink/namespaces/pos/api-server-lb.yaml
@@ -1,3 +1,4 @@
+
 # Copyright 2021 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,6 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# [START anthosbaremetal_pos_api_server_lb_service_api_server_lb]
 apiVersion: v1
 kind: Service
 metadata:
@@ -24,3 +26,5 @@ spec:
   - name: http
     port: 80
     targetPort: 8080
+# [END anthosbaremetal_pos_api_server_lb_service_api_server_lb]
+---
