--- a/anthos-baremetal-edge-deployment/acm-config-sink/namespaces/pos/api-server.yaml
+++ b/anthos-baremetal-edge-deployment/acm-config-sink/namespaces/pos/api-server.yaml
@@ -1,3 +1,4 @@
+
 # Copyright 2021 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,6 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# [START anthosbaremetal_pos_api_server_deployment_api_server]
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -64,7 +66,9 @@ spec:
           initialDelaySeconds: 120
           periodSeconds: 5
           timeoutSeconds: 10
+# [END anthosbaremetal_pos_api_server_deployment_api_server]
 ---
+# [START anthosbaremetal_pos_api_server_service_api_server_svc]
 apiVersion: v1
 kind: Service
 metadata:
@@ -77,3 +81,5 @@ spec:
   - name: http
     port: 8080
     targetPort: 8080
+# [END anthosbaremetal_pos_api_server_service_api_server_svc]
+---
