--- a/anthos-baremetal-edge-deployment/acm-config-sink/namespaces/pos/service-configs.yaml
+++ b/anthos-baremetal-edge-deployment/acm-config-sink/namespaces/pos/service-configs.yaml
@@ -1,3 +1,4 @@
+
 # Copyright 2021 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,6 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# [START anthosbaremetal_pos_service_configs_configmap_service_configs]
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -47,3 +49,5 @@ data:
         imageUrl: "usr/lib/images/short.png"
         quantity: 20
         labels: [ "retail", "textile", "clothing" ]
+# [END anthosbaremetal_pos_service_configs_configmap_service_configs]
+---
