--- a/point-of-sale-app/kubernetes-manifests/service-configs.yaml
+++ b/point-of-sale-app/kubernetes-manifests/service-configs.yaml
@@ -1,3 +1,4 @@
+
 # Copyright 2021 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,6 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# [START anthosbaremetal_kubernetes_manifests_service_configs_configmap_service_configs]
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -20,30 +22,32 @@ data:
   INVENTORY_EP: "http://inventory-svc:8080"
   PAYMENTS_EP: "http://payments-svc:8080"
   CONNECTOR: "IN_MEMORY"
-  ACTIVE_ITEM_TYPE: "burgers"
+  ACTIVE_ITEM_TYPE: "mcdonalds"
   ITEMS: |
     items:
-      - name: "BigBurger"
-        type: "burgers"
+      - name: "BigMac"
+        type: "mcdonalds"
         price: 5.50
-        imageUrl: "usr/lib/images/bigburger.png"
+        imageUrl: "usr/lib/images/bigmac.png"
         quantity: 200
         labels: [ "retail", "restaurant", "food" ]
-      - name: "DoubleBurger"
-        type: "burgers"
+      - name: "McDouble"
+        type: "mcdonalds"
         price: 7.20
-        imageUrl: "usr/lib/images/burgers.png"
+        imageUrl: "usr/lib/images/mcdouble.png"
         quantity: 200
         labels: [ "retail", "restaurant", "food" ]
       - name: "Shirt"
-        type: "textile"
+        type: "forever21"
         price: 15.50
         imageUrl: "usr/lib/images/shirt.png"
         quantity: 50
         labels: [ "retail", "textile", "clothing" ]
       - name: "Short"
-        type: "textile"
+        type: "forever21"
         price: 17.20
         imageUrl: "usr/lib/images/short.png"
         quantity: 20
         labels: [ "retail", "textile", "clothing" ]
+# [END anthosbaremetal_kubernetes_manifests_service_configs_configmap_service_configs]
+---
