--- a/point-of-sale-app/ui/package.json
+++ b/point-of-sale-app/ui/package.json
@@ -41,5 +41,9 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "engines": {
+    "node": ">=16.13.2 <17",
+    "npm": "~8.1.2"
+  }
 }
