--- a/point-of-sale-app/ui/package.json
+++ b/point-of-sale-app/ui/package.json
@@ -1,17 +1,18 @@
 {
   "name": "ui",
-  "version": "0.1.0",
+  "version": "0.1.0-SNAPSHOT",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "copy": "cp -r src/assets target/dist/static && cp src/assets/favicon.ico target/dist/",
+    "build": "vue-cli-service build --mode production && npm run copy"
   },
   "dependencies": {
     "bootstrap": "5.1.3",
     "bootstrap-vue": "2.21.2",
     "vue": "2.6.14",
-    "vue-toast-notification": "3.0.0",
+    "vue-toast-notification": "0.6.2",
     "vuex": "3.6.2"
   },
   "devDependencies": {
