cleanup: fix dependency structure for the repo (#47)
* cleanup: bump linter version to latest

* cleanup: add audit log file to gitignore

* cleanup: add engine restrictions to the package json

* cleanup: include minor linting fixes

* cleanup: rearrange dependencies

* cleanup: restructure the build process

* cleanup: add image config to the jib plugin

* cleanup: set versions for vue toast notifs

* doc: minor cleanup to the main README (#48)

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,6 @@ test-server.yaml
 dev.yaml
 
 node
-package-lock.json
 node_modules
 dist/
 npm.logs
@@ -32,3 +31,5 @@ diff
 remote-gsa-key.json
 gcp.yaml
 rename.sh
+
+.npm_audit
