--- a/point-of-sale-app/ui/pom.xml
+++ b/point-of-sale-app/ui/pom.xml
@@ -30,7 +30,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <frontend-maven-plugin.version>1.12.0</frontend-maven-plugin.version>
+    <frontend-maven-plugin.version>1.12.1</frontend-maven-plugin.version>
   </properties>
 
   <build>
@@ -46,7 +46,7 @@
               <goal>install-node-and-npm</goal>
             </goals>
             <configuration>
-              <nodeVersion>v15.8.0</nodeVersion>
+              <nodeVersion>v16.13.2</nodeVersion>
             </configuration>
           </execution>
           <execution>
@@ -65,7 +65,7 @@
               <goal>npm</goal>
             </goals>
             <configuration>
-              <arguments>run build -- --mode production</arguments>
+              <arguments>run build</arguments>
             </configuration>
           </execution>
         </executions>
