--- a/point-of-sale-app/ui/package.json
+++ b/point-of-sale-app/ui/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0-SNAPSHOT",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "npm run lint && vue-cli-service serve",
     "lint": "vue-cli-service lint",
     "copy": "cp -r src/assets target/dist/static && cp src/assets/favicon.ico target/dist/",
     "build": "vue-cli-service build --mode production && npm run copy"
   },
   "dependencies": {
+    "@vue/cli-plugin-eslint": "4.5.15",
     "bootstrap": "5.1.3",
     "bootstrap-vue": "2.21.2",
     "vue": "2.6.14",
@@ -18,7 +19,6 @@
   "devDependencies": {
     "@fortawesome/fontawesome-free": "5.15.4",
     "@vue/cli-service": "4.5.15",
-    "eslint": "8.6.0",
     "eslint-config-google": "0.14.0",
     "eslint-plugin-vue": "8.3.0",
     "lint": "1.1.2",
