--- a/.github/release-please.yml
+++ b/.github/release-please.yml
@@ -12,6 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-path: point-of-sale-app
+primaryBranch: release-please
 changelogPath: CHANGELOG.md
 handleGHRelease: true
+manifest: true
