--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,4 +1,5 @@
 {
+    "bootstrap-sha": "bcb1950f05e0d0574c54ef4c6d2bdc3eaa42a2ed",
     "packages": {
         "point-of-sale-app/service-sdk": {
             "release-type": "java-yoshi"
