--- a/point-of-sale-app/skaffold.yaml
+++ b/point-of-sale-app/skaffold.yaml
@@ -18,13 +18,13 @@ metadata:
   name: backend # module defining backend services
 build:
   artifacts:
-  - image: us-docker.pkg.dev/anthos-dpe-abm-edge-pos/abm-edge-pos-images/api-server
+  - image: api-server
     jib:
       project: api-server
-  - image: us-docker.pkg.dev/anthos-dpe-abm-edge-pos/abm-edge-pos-images/inventory
+  - image: inventory
     jib:
       project: inventory
-  - image: us-docker.pkg.dev/anthos-dpe-abm-edge-pos/abm-edge-pos-images/payments
+  - image: payments
     jib:
       project: payments
   tagPolicy:
