--- a/anthos-baremetal-edge-deployment/roles/abm-software/files/external-secrets-crd.yaml
+++ b/anthos-baremetal-edge-deployment/roles/abm-software/files/external-secrets-crd.yaml
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# [START anthosbaremetal_files_external_secrets_crd_customresourcedefinition_externalsecrets.kubernetes_client.io]
+# [START anthosbaremetal_files_external_secrets_crd_customresourcedefinition_externalsecrets_kubernetes_client_io]
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
@@ -159,5 +159,4 @@ spec:
                 - dataFrom
   subresources:
     status: {}
-# [END anthosbaremetal_files_external_secrets_crd_customresourcedefinition_externalsecrets.kubernetes_client.io]
----
+# [END anthosbaremetal_files_external_secrets_crd_customresourcedefinition_externalsecrets_kubernetes_client_io]
