cleanup: add region tags to .sh and .yaml files (#29)
* Region tags to sh and k8 yaml

* Added back removed script portion

* Shifted shebang and changed region tag with .

--- a/point-of-sale-app/kubernetes-manifests/payments.yaml
+++ b/point-of-sale-app/kubernetes-manifests/payments.yaml
@@ -1,3 +1,4 @@
+
 # Copyright 2021 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,6 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# [START anthosbaremetal_kubernetes_manifests_payments_deployment_payments]
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -51,7 +53,9 @@ spec:
           initialDelaySeconds: 120
           periodSeconds: 5
           timeoutSeconds: 10
+# [END anthosbaremetal_kubernetes_manifests_payments_deployment_payments]
 ---
+# [START anthosbaremetal_kubernetes_manifests_payments_service_payments_svc]
 apiVersion: v1
 kind: Service
 metadata:
@@ -64,3 +68,4 @@ spec:
   - name: http
     port: 8080
     targetPort: 8080
+# [END anthosbaremetal_kubernetes_manifests_payments_service_payments_svc]
