--- a/anthos-baremetal-edge-deployment/acm-config-sink/system/repo.yaml
+++ b/anthos-baremetal-edge-deployment/acm-config-sink/system/repo.yaml
@@ -1,3 +1,4 @@
+
 # Copyright 2021 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,9 +13,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# [START anthosbaremetal_system_repo_repo_repo]
 kind: Repo
 apiVersion: configmanagement.gke.io/v1
 metadata:
   name: repo
 spec:
   version: "0.1.0"
+# [END anthosbaremetal_system_repo_repo_repo]
