--- a/point-of-sale-app/kubernetes-manifests/api-server.yaml
+++ b/point-of-sale-app/kubernetes-manifests/api-server.yaml
@@ -1,3 +1,4 @@
+
 # Copyright 2021 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,6 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# [START anthosbaremetal_kubernetes_manifests_api_server_deployment_api_server]
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -62,7 +64,9 @@ spec:
           initialDelaySeconds: 120
           periodSeconds: 5
           timeoutSeconds: 10
+# [END anthosbaremetal_kubernetes_manifests_api_server_deployment_api_server]
 ---
+# [START anthosbaremetal_kubernetes_manifests_api_server_service_api_server_svc]
 apiVersion: v1
 kind: Service
 metadata:
@@ -75,3 +79,4 @@ spec:
   - name: http
     port: 8080
     targetPort: 8080
+# [END anthosbaremetal_kubernetes_manifests_api_server_service_api_server_svc]
