--- a/renovate.json
+++ b/renovate.json
@@ -10,6 +10,14 @@
     {
       "matchPackageNames": ["npm"],
       "allowedVersions": "<8.2.0"
+    },
+    {
+      "matchPackageNames": ["vue"],
+      "allowedVersions": "<3.0.0"
+    },
+    {
+      "matchPackageNames": ["vuex"],
+      "allowedVersions": "<4.0.0"
     }
   ]
 }
