cleanup: update kubectl image in skaffold builder

--- a/.github/cloudbuild/skaffold-builder/Dockerfile
+++ b/.github/cloudbuild/skaffold-builder/Dockerfile
@@ -1,5 +1,5 @@
 # https://github.com/GoogleCloudPlatform/cloud-builders/tree/master/kubectl
-FROM gcr.io/google.com/cloudsdktool/cloud-sdk
+FROM gcr.io/cloud-builders/kubectl
 
 RUN mkdir -p /builder/bin && \
   apt-get update && \
