--- a/.github/cloudbuild/pr-open-to-main-pos.yaml
+++ b/.github/cloudbuild/pr-open-to-main-pos.yaml
@@ -1,3 +1,17 @@
+# Copyright 2022 Google LLC
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#      http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 steps:
 # maven build to ensure the source builds
 - name: 'gcr.io/cloud-builders/mvn'
@@ -7,8 +21,8 @@ steps:
       'install'
   ]
 
-# npm install to ensure ui builds
-- name: 'node'
+# npm install to ensure ui dependencies have no errors
+- name: 'node:16.14.0'
   dir: 'point-of-sale-app/ui'
   entrypoint: 'npm'
   args: [ 'install' ]
@@ -34,7 +48,6 @@ steps:
       '-f',
       'namespace.yaml'
   ]
-
 
 # skaffold deploy to kubernetes cluster
 - name: 'us-docker.pkg.dev/$PROJECT_ID/cloudbuilders/skaffold:alpha'
