cleanup: update namepsace yaml creation

--- a/.github/cloudbuild/pr-open-to-main-pos.yaml
+++ b/.github/cloudbuild/pr-open-to-main-pos.yaml
@@ -13,32 +13,41 @@
 # limitations under the License.
 
 steps:
-# maven build to ensure the source builds
-- name: 'gcr.io/cloud-builders/mvn'
+- id: 'maven-install'
+  name: 'gcr.io/cloud-builders/mvn'
   dir: 'point-of-sale-app'
   args: [
       'clean',
       'install'
   ]
+  waitFor: [ '-' ]
 
 # npm install to ensure ui dependencies have no errors
-- name: 'node:16.14.0'
+- id: 'npm-install'
+  name: 'node:16.14.0'
   dir: 'point-of-sale-app/ui'
   entrypoint: 'npm'
   args: [ 'install' ]
+  waitFor: [ '-' ]
 
-# create PR namespace
-#- name: 'gcr.io/cloud-builders/kubectl'
-#  env:
-#  - 'CLOUDSDK_COMPUTE_ZONE=$_DEV_CLUSTER_ZONE'
-#  - 'CLOUDSDK_CONTAINER_CLUSTER=$_DEV_CLUSTER'
-#  args: [
-#      'create',
-#      'namespace',
-#      'pr-$_PR_NUMBER'
-#  ]
+# create namespace yaml for the PR
+- id: 'create-namespace.yaml'
+  name: ubuntu
+  entrypoint: bash
+  args:
+  - -c
+  - |
+    cat <<EOF > /workspace/namespace.yaml -
+    apiVersion: v1
+    kind: Namespace
+    metadata:
+      name: pr-$_PR_NUMBER
+    EOF
+  waitFor: [ '-' ]
 
-- name: 'gcr.io/cloud-builders/kubectl'
+# apply the namespace.yaml
+- id: 'create-k8s-namespace'
+  name: 'gcr.io/cloud-builders/kubectl'
   dir: '.github/cloudbuild'
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=$_DEV_CLUSTER_ZONE'
@@ -46,11 +55,13 @@ steps:
   args: [
       'apply',
       '-f',
-      'namespace.yaml'
+      '/workspace/namespace.yaml'
   ]
+  waitFor: [ 'create-namespace.yaml' ]
 
 # skaffold deploy to kubernetes cluster
-- name: 'us-docker.pkg.dev/$PROJECT_ID/cloudbuilders/skaffold:alpha'
+- id: 'deploy-to-k8s'
+  name: 'us-docker.pkg.dev/$PROJECT_ID/cloudbuilders/skaffold:alpha'
   dir: 'point-of-sale-app'
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=$_DEV_CLUSTER_ZONE'
@@ -62,3 +73,4 @@ steps:
       '--tag=pr-$_PR_NUMBER',
       '--namespace=pr-$_PR_NUMBER'
   ]
+  waitFor: [ 'create-k8s-namespace' ]
