--- a/.github/cloudbuild/pr-open-to-main-pos.yaml
+++ b/.github/cloudbuild/pr-open-to-main-pos.yaml
@@ -64,8 +64,19 @@ steps:
   name: 'gcr.io/k8s-skaffold/skaffold:v1.36.0'
   dir: 'point-of-sale-app'
   args: [
-      'gcloud container clusters get-credentials --zone $_DEV_CLUSTER_ZONE $_DEV_CLUSTER',
+      'gcloud',
+      'container',
+      'clusters',
+      'get-credentials',
+      '--zone',
+      '$_DEV_CLUSTER_ZONE',
+      '$_DEV_CLUSTER',
       '&&',
-      'skaffold run -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --tag=pr-$_PR_NUMBER --namespace=pr-$_PR_NUMBER'
+      'skaffold',
+      'run',
+      '-f=skaffold.yaml',
+      '--default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO',
+      '--tag=pr-$_PR_NUMBER',
+      '--namespace=pr-$_PR_NUMBER'
   ]
   # waitFor: commented out, so still steps waits for all previous steps
