--- a/.github/cloudbuild/pr-open-to-main-pos.yaml
+++ b/.github/cloudbuild/pr-open-to-main-pos.yaml
@@ -12,6 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+timeout: 900s
 steps:
 - id: 'maven-install'
   name: 'gcr.io/cloud-builders/mvn'
