process: add options related t custom sa

--- a/.github/cloudbuild/pr-open-to-main-pos.yaml
+++ b/.github/cloudbuild/pr-open-to-main-pos.yaml
@@ -13,6 +13,8 @@
 # limitations under the License.
 
 timeout: 900s
+options:
+  logging: CLOUD_LOGGING_ONLY
 steps:
 - id: 'maven-install'
   name: 'gcr.io/cloud-builders/mvn'
