ci: add steps to deploy main to staging

--- a/.github/cloudbuild/pos-pr-open-to-main.yaml
+++ b/.github/cloudbuild/pos-pr-open-to-main.yaml
@@ -12,6 +12,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+###########################################################
+# This is a GCP CloudBuild Trigger config file. The trigger
+# is for a PullRequest event pointing to the main branch
+###########################################################
+
 steps:
   ###########################################################
   # maven install to ensure correct java dependencies
@@ -83,9 +88,13 @@ steps:
   - |
     cat <<EOF > /workspace/deploy.sh -
     #!/bin/bash
+
+    # cleanup maven cache; see https://github.com/flutter/flutter/issues/73852
     rm -rf ~/.mvn
+
     gcloud container clusters get-credentials --zone $_DEV_CLUSTER_ZONE $_DEV_CLUSTER
     skaffold run -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --namespace=pr-$_PR_NUMBER --tag=pr-$_PR_NUMBER
+
     EOF
   # indicates that the step need not wait for any other step
   waitFor: [ '-' ]
